<resources>
    <string name="app_name">Skuad Talent</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="welcome_to_skuad">Welcome to Skuad</string>
    <string name="sign_in_instruction">Login with your Gmail account to use Skuad platform</string>
    <string name="sign_in">Sign in</string>
    <string name="create_your_skuad_profile">Create your Skuad profile</string>
    <string name="sign_up_instruction">Create your profile in few easy steps and get matched to amazing global opportunities</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="confirm_password">Confirm password</string>
    <string name="create_account">Create Account</string>
    <string name="check_conditions"><![CDATA[By clicking Create Account,you agree to our Terms & Privacy Policy.]]></string>
    <string name="don_t_have_an_account_signup">Don\'t have an account?<font color='#FF0000'> Signup</font></string>
    <string name="already_have_an_account_signin">Already have an account? <font color='#FF0000'>Signin</font></string>
    <string name="skills">Skills like Java, Android, Kotlin</string>
    <string name="experience_not_available">Experience : NA</string>
    <string name="skills_not_available">Skills : NA</string>
    <string name="resume_not_available">Resume not available</string>
    <string name="server_client_id" translatable="false">1090609532096-d3p7ihmvut8r87thbrk0sa76ndrlbvf7.apps.googleusercontent.com</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="experience">Years Of Experience</string>
    <string name="selected">SHORTLIST</string>
    <string name="rejected">REJECT</string>
    <string name="skuad_talent">SKUAD TALENT</string>
    <string name="login">LOGIN</string>
    <string name="welcome_to_skuad_talent">Welcome to SKUAD TALENT</string>
    <string name="android">Android</string>
    <string name="active_number">Active 20</string>
    <string name="ios">iOS</string>
    <string name="backend">Backend</string>
    <string name="candidate_name">Candidate Name</string>
    <string name="years_of_experience">Years of experience</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="or">or</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="address">Pune, Maharashtra</string>
    <string name="current_employer">Current Employer</string>
    <string name="current_salary">Current Salary</string>
    <string name="notice_period">Notice Period</string>
    <string name="list_not_available">List Not Available</string>
    <string name="dialog_title">Dialog Title</string>
    <string name="profile_selection_status">This profile has been Shortlisted / Rejected .</string>
    <string name="ok">OK</string>
    <string name="current_employer_not_available">Current Employer : NA</string>
    <string name="salary_not_available"> NA</string>
    <string name="notice_period_not_available"> NA</string>
    <string name="designation_exp_not_available">Designation : NA | Experience : NA</string>
    <string name="profile_shortlisted">This profile has been Selected.</string>
    <string name="profile_rejected">This profile has been Rejected.</string>
    <string name="profile_status">Profile Status</string>
    <string name="designation_experience_not_available">Designation : NA | Experience : NA</string>
    <string name="logout_from_skuad">Logout from Hire</string>
    <string name="sure_you_want_to_logout_now">Sure you want to logout now?</string>
    <string name="cancel">Cancel</string>
    <string name="logout_title">Logout from SkuadHire</string>
    <string name="cnf_logout">Sure you want to logout now?</string>
    <string name="download">Download</string>
    <string name="resume">Resume</string>
    <string name="Name">Hello, Shailee</string>
    <string name="skuad_talent_">Skuad Talent</string>
    <string name="click_download">Click on download to view Resume</string>


</resources>