<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/dimen_20"
    android:padding="@dimen/dimen_20">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ivSkuadLogo"
        android:layout_width="@dimen/dimen_120"
        android:layout_height="@dimen/dimen_60"
        android:src="@drawable/skuad_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvCreateProfile"
        android:layout_width="@dimen/dimen_0"
        android:layout_height="wrap_content"
        android:text="@string/create_your_skuad_profile"
        android:textColor="@color/black"
        android:textSize="@dimen/font_25"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivSkuadLogo" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvSignUpInstruction"
        android:layout_width="@dimen/dimen_0"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_instruction"
        android:textColor="@color/black"
        android:textSize="@dimen/font_15"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCreateProfile" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtFullName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="@dimen/dimen_0"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/dimen_25"
        android:hint="@string/full_name"
        app:layout_constraintEnd_toEndOf="@id/tvCreateProfile"
        app:layout_constraintStart_toStartOf="@id/tvCreateProfile"
        app:layout_constraintTop_toBottomOf="@id/tvSignUpInstruction">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtEmailAddress"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="@dimen/dimen_0"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/dimen_25"
        android:hint="@string/email_address"
        app:layout_constraintEnd_toEndOf="@id/tvCreateProfile"
        app:layout_constraintStart_toStartOf="@id/tvCreateProfile"
        app:layout_constraintTop_toBottomOf="@id/edtFullName">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="@dimen/dimen_0"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/dimen_25"
        android:hint="@string/password"
        app:layout_constraintEnd_toEndOf="@id/tvCreateProfile"
        app:layout_constraintStart_toStartOf="@id/tvCreateProfile"
        app:layout_constraintTop_toBottomOf="@id/edtEmailAddress"
        app:passwordToggleDrawable="@drawable/show_password_selector"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtConfirmPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="@dimen/dimen_0"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/dimen_25"
        android:hint="@string/confirm_password"
        app:layout_constraintEnd_toEndOf="@id/tvCreateProfile"
        app:layout_constraintStart_toStartOf="@id/tvCreateProfile"
        app:layout_constraintTop_toBottomOf="@id/edtPassword"
        app:passwordToggleDrawable="@drawable/show_password_selector"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/dimen_20"
        app:layout_constraintEnd_toStartOf="@+id/tvTermsConditions"
        app:layout_constraintStart_toStartOf="@id/edtFullName"
        app:layout_constraintTop_toBottomOf="@id/edtConfirmPassword" />

    <TextView
        android:id="@+id/tvTermsConditions"
        android:layout_width="@dimen/dimen_0"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="@dimen/dimen_5"
        android:text="@string/check_conditions"
        android:textSize="@dimen/font_15"
        app:layout_constraintEnd_toEndOf="@id/edtFullName"
        app:layout_constraintStart_toEndOf="@id/checkBox"
        app:layout_constraintTop_toTopOf="@id/checkBox" />

    <Button
        android:id="@+id/btnCreateAccount"
        android:layout_width="@dimen/dimen_0"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/dimen_20"
        android:background="@drawable/rounded_red_shape"
        android:text="@string/create_account"
        android:textSize="@dimen/font_15"
        app:layout_constraintEnd_toEndOf="@id/edtFullName"
        app:layout_constraintStart_toStartOf="@id/edtFullName"
        app:layout_constraintTop_toBottomOf="@id/checkBox" />

    <TextView
        android:id="@+id/tvAlreadySigup"
        android:layout_width="@dimen/dimen_0"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/dimen_20"
        android:gravity="center"
        android:text="@string/already_have_an_account_signin"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@id/edtFullName"
        app:layout_constraintStart_toStartOf="@id/edtFullName"
        app:layout_constraintTop_toBottomOf="@id/btnCreateAccount" />

</androidx.constraintlayout.widget.ConstraintLayout>