<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/dimen_5"
    android:layout_marginVertical="@dimen/dimen_5"
    android:background="@drawable/row_item_bg"
    android:elevation="@dimen/dimen_8"
    android:padding="@dimen/dimen_10">

    <ImageView
        android:id="@+id/ivAvatar"
        android:layout_width="@dimen/dimen_60"
        android:layout_height="@dimen/dimen_60"
        android:layout_margin="@dimen/dimen_5"
        android:src="@drawable/avtar"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/tvAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvCandidateName" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvCandidateName"
        android:layout_width="@dimen/dimen_0"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_5"
        android:gravity="center_vertical"
        android:text="@string/candidate_name"
        android:textColor="@color/black"
        android:textSize="@dimen/font_17"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="@id/tvYearsOfExperience"
        app:layout_constraintStart_toEndOf="@id/ivAvatar"
        app:layout_constraintTop_toTopOf="@id/ivAvatar" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvYearsOfExperience"
        android:layout_width="@dimen/dimen_0"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/years_of_experience"
        android:textColor="@color/black"
        android:textSize="@dimen/font_15"
        android:textStyle="normal"
        app:layout_constraintEnd_toStartOf="@id/ivArrow"
        app:layout_constraintStart_toStartOf="@id/tvCandidateName"
        app:layout_constraintTop_toBottomOf="@id/tvCandidateName" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvAddress"
        android:layout_width="@dimen/dimen_0"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:ems="3"
        android:gravity="center_vertical"
        android:maxLines="2"
        android:text="@string/address"
        android:textColor="@color/black"
        android:textSize="@dimen/font_15"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tvCandidateName"
        app:layout_constraintTop_toBottomOf="@id/tvYearsOfExperience" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvCurrentEmployer"
        android:layout_width="@dimen/dimen_0"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:gravity="center_vertical"
        android:text="@string/current_employer"
        android:textColor="@color/black"
        android:textSize="@dimen/font_15"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="@id/tvYearsOfExperience"
        app:layout_constraintStart_toStartOf="@id/tvCandidateName"
        app:layout_constraintTop_toBottomOf="@id/tvAddress" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvSalary"
        android:layout_width="@dimen/dimen_0"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:gravity="center_vertical"
        android:text="@string/current_salary"
        android:textColor="@color/black"
        android:textSize="@dimen/font_15"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="@id/tvYearsOfExperience"
        app:layout_constraintStart_toStartOf="@id/tvCandidateName"
        app:layout_constraintTop_toBottomOf="@id/tvCurrentEmployer" />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvNoticePeriod"
        android:layout_width="@dimen/dimen_0"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:gravity="center_vertical"
        android:text="@string/notice_period"
        android:textColor="@color/black"
        android:textSize="@dimen/font_15"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="@id/tvYearsOfExperience"
        app:layout_constraintStart_toStartOf="@id/tvCandidateName"
        app:layout_constraintTop_toBottomOf="@id/tvSalary" />

    <ImageView
        android:id="@+id/ivArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_10"
        android:src="@drawable/chevron_right"
        app:layout_constraintBottom_toBottomOf="@id/tvAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvAddress" />

</androidx.constraintlayout.widget.ConstraintLayout>