<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="@dimen/dimen_0"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="@dimen/dimen_0"
        android:layout_height="@dimen/dimen_1"
        android:background="@color/fade_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvCandidateName"
        style="@style/TextStyleBlack_18_500"
        android:layout_width="@dimen/dimen_0"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_20"
        android:layout_marginTop="@dimen/dimen_10"
        android:layout_marginRight="@dimen/dimen_10"
        android:gravity="center_vertical"
        android:text="Candidate Name "
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvDesignation"
        style="@style/TextStyleGrey_14_400"
        android:layout_width="@dimen/dimen_0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_5"
        android:gravity="center_vertical"
        android:text="@string/experience"
       app:layout_constraintEnd_toEndOf="@id/tvCandidateName"
        app:layout_constraintStart_toStartOf="@id/tvCandidateName"
        app:layout_constraintTop_toBottomOf="@id/tvCandidateName" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvAddress"
        android:layout_width="@dimen/dimen_0"
        style="@style/TextStyleGrey_14_400"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/address"
        app:layout_constraintEnd_toEndOf="@id/tvCandidateName"
        app:layout_constraintStart_toStartOf="@id/tvCandidateName"
        app:layout_constraintTop_toBottomOf="@id/tvDesignation" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvCurrentEmployer"
        android:layout_width="@dimen/dimen_0"
        style="@style/TextStyleGrey_14_400"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/current_employer"
        app:layout_constraintEnd_toEndOf="@id/tvDesignation"
        app:layout_constraintStart_toStartOf="@id/tvCandidateName"
        app:layout_constraintTop_toBottomOf="@id/tvAddress" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvSalary"
        android:layout_width="@dimen/dimen_0"
        style="@style/TextStyleGrey_14_400"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/current_salary"
        app:layout_constraintEnd_toEndOf="@id/tvDesignation"
        app:layout_constraintStart_toStartOf="@id/tvCandidateName"
        app:layout_constraintTop_toBottomOf="@id/tvCurrentEmployer" />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvNoticePeriod"
        android:layout_width="@dimen/dimen_0"
        style="@style/TextStyleGrey_14_400"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/notice_period"
        app:layout_constraintEnd_toEndOf="@id/tvCandidateName"
        app:layout_constraintStart_toStartOf="@id/tvCandidateName"
        app:layout_constraintTop_toBottomOf="@id/tvSalary" />

    <TextView
        android:id="@+id/btnSelected"
        android:layout_width="@dimen/dimen_0"
        style="@style/TextStyleTeal_12_500"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_10"
        android:background="@drawable/rounded_shape_selected_button"
        android:drawableEnd="@drawable/ic_green_checkmark"
        android:gravity="center"
        android:padding="@dimen/dimen_10"
        android:text="@string/selected"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btnRejected"
        app:layout_constraintTop_toBottomOf="@id/tvNoticePeriod" />


    <TextView
        android:id="@+id/btnRejected"
        style="@style/TextStyleRed_12_500"
        android:layout_width="@dimen/dimen_0"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_10"
        android:background="@drawable/rounded_shape_rejected_button"
        android:drawableEnd="@drawable/ic_red_crossmark"
        android:gravity="center"
        android:padding="@dimen/dimen_10"
        android:text="@string/rejected"
        app:layout_constraintBottom_toBottomOf="@id/btnSelected"
        app:layout_constraintLeft_toRightOf="@id/btnSelected"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/btnSelected" />

    <View
        android:id="@+id/divider2"
        android:layout_width="@dimen/dimen_0"
        android:layout_height="@dimen/dimen_10"
        android:layout_margin="@dimen/dimen_20"
        android:layout_marginTop="@dimen/dimen_20"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnSelected" />

    <TextView
        android:id="@+id/tvResumeHeading"
        android:layout_width="@dimen/dimen_0"
        style="@style/TextStyle_12_500"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_20"
        android:layout_marginTop="@dimen/dimen_10"
        android:gravity="center_vertical"
        android:text="Resume"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider2" />

    <FrameLayout
        android:id="@+id/webView"
        android:layout_width="@dimen/dimen_0"
        android:layout_height="@dimen/dimen_0"
        android:layout_marginHorizontal="@dimen/dimen_20"
        android:layout_marginTop="@dimen/dimen_20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvResumeHeading">

        <TextView
            android:id="@+id/tvNoResume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/resume_not_available"
            android:textSize="@dimen/font_20"
            android:visibility="gone" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>