<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="@dimen/dimen_20">

    <ImageView
        android:id="@+id/iv_invite"
        android:layout_width="@dimen/dimen_60"
        android:layout_height="@dimen/dimen_60"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/skuad_image" />

    <TextView
        android:id="@+id/tvAlertTitle"
        style="@style/OpenSansTextViewStyleBlack_16_600"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/profile_status"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_invite" />

    <TextView
        android:id="@+id/tv_description"
        style="@style/OpenSansTextViewStyleGrey_dark_12_400"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_18"
        android:gravity="center"
        android:paddingHorizontal="@dimen/dimen_20"
        android:text="@string/profile_selection_status"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAlertTitle" />

    <TextView
        android:id="@+id/btn_ok_dialog"
        style="@style/OpenSansSemiboldTextViewStyleWhite_14_600"
        android:layout_width="@dimen/dimen_132"
        android:layout_height="@dimen/dimen_44"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_red_filled"
        android:gravity="center"
        android:text="@string/ok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_description" />

</androidx.constraintlayout.widget.ConstraintLayout>